--- a/manual.html
+++ b/manual.html
@@ -400,7 +400,7 @@
                   border-radius: 5px;
                 "
               ></div>
-              <p>оранжевий</p>
+              <p>жовтогарячий</p>
             </div>
             <div class="gallery-item">
               <div
