--- a/manual.html
+++ b/manual.html
@@ -455,9 +455,8 @@
           <h3>Приклад з різними кольорами</h3>
 
           <div class="example-code">
-            колір червоний вперед 100 праворуч 90 колір синій вперед 100
-            праворуч 90 колір зелений вперед 100 праворуч 90 колір жовтий вперед
-            100
+колір червоний вперед 100 праворуч 90 колір синій вперед 100
+праворуч 90 колір зелений вперед 100 праворуч 90 колір жовтий вперед 100
           </div>
 
           <div class="example-result">
