--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             class="example-block"
             data-code="колір синій повтори 8 ( вперед 50 праворуч 45 )"
           >
-            Синій восьмикурник
+            Синій восьмикутник
           </div>
           <div
             class="example-block"
