--- a/manual.html
+++ b/manual.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Посібник з програмування равлика RAVLYK</title>
     <link rel="stylesheet" type="text/css" href="manual-style.css" />
+            <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QV58ZGT594"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-QV58ZGT594');
+    </script>
   </head>
 
   <body>
