--- a/new/index.html
+++ b/new/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -27,6 +26,7 @@
       <div class="toolbar">
         <button id="run-btn" class="main-btn" title="Запусти програму" aria-label="Запусти програму">▶️ Запусти</button>
         <button id="clear-btn" class="main-btn" title="Очистити малюнок" aria-label="Очистити малюнок">🧹 Очистити</button>
+        <button id="save-btn" class="main-btn" title="Зберегти малюнок" aria-label="Зберегти малюнок">💾 Зберегти</button>
         <button id="help-btn" class="main-btn" title="Пояснення команд 🛈" aria-label="Пояснення команд">🛈 Довідка</button>
       </div>
       <div class="main-area">
