--- a/new/manual.html
+++ b/new/manual.html
@@ -39,6 +39,7 @@
             <li><a href="#intro">Що таке РАВЛИК?</a></li>
             <li><a href="#basic-commands">Основні команди</a></li>
             <li><a href="#repetition">Повторення команд</a></li>
+            <li><a href="#limitations">Обмеження та особливості</a></li>
             <li><a href="#errors">Помилки</a></li>
             <li><a href="#drawing">Малювання форм</a></li>
             <li><a href="#colors">Використання кольорів</a></li>
@@ -237,6 +238,53 @@
           </div>
         </div>
         
+        <div id="limitations" class="guide-section">
+          <h2>Обмеження та особливості</h2>
+
+          <p>
+            При роботі з равликом важливо знати про деякі обмеження та особливості, які допоможуть тобі створювати кращі програми:
+          </p>
+
+          <div class="tips-box">
+            <h4>Межі полотна:</h4>
+            <p>
+              Равлик не може вийти за межі полотна. Якщо він спробує це зробити, ти побачиш повідомлення: 
+              <strong>"Равлик не може вийти за межі поля!"</strong>
+            </p>
+            <p>
+              Полотно має максимальний розмір 3000x3000 пікселів для запобігання проблем з продуктивністю.
+            </p>
+          </div>
+
+          <div class="tips-box">
+            <h4>Обмеження коду:</h4>
+            <ul>
+              <li><strong>Довжина коду:</strong> Максимум 10000 символів</li>
+              <li><strong>Час виконання:</strong> Не більше 5 секунд</li>
+              <li><strong>Вкладені повторення:</strong> Не більше 20 рівнів</li>
+              <li><strong>Кількість повторень:</strong> Не більше 1000 повторень в одному циклі</li>
+            </ul>
+          </div>
+
+          <div class="tips-box">
+            <h4>Збереження малюнка:</h4>
+            <p>
+              Ти можеш зберегти свій малюнок як зображення, натиснувши кнопку "Зберегти малюнок". Малюнок збережеться у форматі PNG.
+            </p>
+            <p>
+              Якщо виникають проблеми зі збереженням через обмеження безпеки браузера, ти можеш зробити скріншот екрана.
+            </p>
+          </div>
+
+          <div class="tips-box">
+            <h4>Швидкі клавіші:</h4>
+            <ul>
+              <li><strong>Ctrl+Enter</strong> або <strong>Shift+Enter</strong>: Запустити код</li>
+              <li><strong>Esc</strong>: Зупинити виконання (якщо код виконується занадто довго)</li>
+            </ul>
+          </div>
+        </div>
+        
         <div id="errors" class="guide-section">
           <h2>Помилки</h2>
 
@@ -307,6 +355,55 @@
             <hr>
             <p>
               <strong>Перевірте чи правильно написано команду для равлика.</strong>
+            </p>
+          </div>
+          <div class="interactive-example">
+            <h4>'Невідомий колір:'</h4>
+            <hr>
+            <p>
+              <strong>Використовуйте лише доступні кольори: червоний, синій, зелений, жовтий, жовтогарячий, фіолетовий, рожевий, чорний.</strong>
+            </p>
+          </div>
+          <div class="interactive-example">
+            <h4>'Занадто багато вкладених команд "повторити"'</h4>
+            <hr>
+            <p>
+              <strong>Спростіть свою програму, не використовуйте більше 20 рівнів вкладеності.</strong>
+            </p>
+          </div>
+          <div class="interactive-example">
+            <h4>'Занадто багато повторень'</h4>
+            <hr>
+            <p>
+              <strong>Зменшіть кількість повторень до 1000 або менше.</strong>
+            </p>
+          </div>
+          <div class="interactive-example">
+            <h4>'Виконання програми зайняло занадто багато часу'</h4>
+            <hr>
+            <p>
+              <strong>Спростіть програму, щоб вона виконувалась швидше (за менше ніж 5 секунд).</strong>
+            </p>
+          </div>
+          <div class="interactive-example">
+            <h4>'Равлик не може вийти за межі поля!'</h4>
+            <hr>
+            <p>
+              <strong>Змініть напрямок руху равлика або зменшіть відстань, щоб він залишався в межах полотна.</strong>
+            </p>
+          </div>
+          <div class="interactive-example">
+            <h4>'Помилка при збереженні малюнка:'</h4>
+            <hr>
+            <p>
+              <strong>Можуть виникати через обмеження браузера або проблеми з доступом. Спробуйте зробити скріншот екрана.</strong>
+            </p>
+          </div>
+          <div class="interactive-example">
+            <h4>'Код занадто довгий'</h4>
+            <hr>
+            <p>
+              <strong>Спростіть вашу програму, щоб вона містила менше 10000 символів.</strong>
             </p>
           </div>
         </div>
