--- a/index.html
+++ b/index.html
@@ -1,173 +1,113 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Равлик - онлайн програмування</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
-        <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QV58ZGT594"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-    
-      gtag('config', 'G-QV58ZGT594');
-    </script>
-  </head>
+<html lang="uk">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Равлик Переїхав!</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Comic Sans MS', 'Chalkboard SE', cursive; /* Стиль шрифту як у редакторі */
+        }
 
-  <body>
+        body {
+            background-color: #f0f8ff; /* Колір фону як у редакторі */
+            padding: 15px;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center; /* Центрування контенту */
+            justify-content: center; /* Центрування контенту */
+            text-align: center;
+        }
+
+        header {
+            text-align: center;
+            margin-bottom: 25px; /* Збільшено відступ */
+            color: #4b0082; /* Колір заголовка як у редакторі */
+        }
+
+        h1 {
+            font-size: 3rem; /* Розмір головного заголовка */
+            margin-bottom: 15px; /* Збільшено відступ */
+        }
+
+        .container {
+            background-color: white;
+            border-radius: 10px;
+            padding: 30px 40px; /* Збільшено внутрішні відступи */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border: 3px solid #6a5acd; /* Рамка як у code-box */
+            max-width: 600px; /* Обмеження ширини для кращого вигляду */
+        }
+
+        .message {
+            font-size: 1.5rem; /* Збільшено розмір тексту повідомлення */
+            color: #333;
+            line-height: 1.6;
+            margin-bottom: 25px; /* Збільшено відступ */
+        }
+
+        .new-address-link {
+            display: inline-block;
+            padding: 12px 25px; /* Збільшено розмір кнопки */
+            background-color: #32cd32; /* Колір як у кнопки "Run" */
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+            border-radius: 8px;
+            font-size: 1.2rem; /* Збільшено розмір тексту на кнопці */
+            transition: background-color 0.3s, transform 0.2s;
+        }
+
+        .new-address-link:hover {
+            background-color: #28a428; /* Трохи темніший колір при наведенні */
+            transform: scale(1.05);
+        }
+
+        .snail-icon {
+            font-size: 4rem; /* Великий розмір іконки равлика */
+            margin-bottom: 20px;
+            display: block; /* Для центрування */
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        footer {
+            text-align: center;
+            margin-top: 30px; /* Збільшено відступ */
+            color: #666;
+            font-size: 0.9rem;
+        }
+    </style>
+</head>
+<body>
     <header>
-      <h1>🐌 Малюй з Равликом! 🐌</h1>
-      <h2>Равлик - твоя перша мова програмування!</h2>
+        <h1>🐌 Ой, здається, Равлик змінив адресу! 🐌</h1>
     </header>
+
     <div class="container">
-      <div class="color-toolbar">
-        <div
-          class="color-btn selected"
-          style="background-color: black"
-          data-color="black"
-        ></div>
-        <div
-          class="color-btn"
-          style="background-color: red"
-          data-color="red"
-        ></div>
-        <div
-          class="color-btn"
-          style="background-color: blue"
-          data-color="blue"
-        ></div>
-        <div
-          class="color-btn"
-          style="background-color: green"
-          data-color="green"
-        ></div>
-        <div
-          class="color-btn"
-          style="background-color: orange"
-          data-color="orange"
-        ></div>
-        <div
-          class="color-btn"
-          style="background-color: purple"
-          data-color="purple"
-        ></div>
-        <div
-          class="color-btn"
-          style="background-color: pink"
-          data-color="pink"
-        ></div>
-        <div
-          class="color-btn"
-          style="background-color: yellow"
-          data-color="yellow"
-        ></div>
-      </div>
-      <div class="buttons">
-        <button id="run-btn">Запустити 🚀</button>
-        <button id="clear-btn">Очистити 🧹</button>
-      </div>
-      <div class="main-area">
-        <div class="code-box">
-          <div class="code-header">Команди для равлика</div>
-          <textarea
-            id="code-editor"
-            placeholder="Напиши команди для равлика тут...
-Приклад:
-вперед 100
-праворуч 90
-вперед 100"
-          ></textarea>
-        </div>
-        <div class="canvas-box">
-          <div class="canvas-header">Малюнок равлика</div>
-          <canvas id="ravlyk-canvas"></canvas>
-          <!-- <div id="start-marker" class="start-marker"></div> -->
-        </div>
-      </div>
-      <div class="examples">
-        <h2>Спробуй ці приклади!</h2>
-        <div class="example-blocks">
-          <div
-            class="example-block"
-            data-code="повтори 4 ( вперед 100 праворуч 90 )"
-          >
-            Квадрат
-          </div>
-          <div
-            class="example-block"
-            data-code="повтори 36 ( вперед 5 праворуч 10 )"
-          >
-            Коло
-          </div>
-          <div
-            class="example-block"
-            data-code="колір червоний повтори 3 ( вперед 100 праворуч 120 )"
-          >
-            Червоний трикутник
-          </div>
-          <div
-            class="example-block"
-            data-code="колір синій повтори 8 ( вперед 50 праворуч 45 )"
-          >
-            Синій восьмикутник
-          </div>
-          <div
-            class="example-block"
-            data-code="колір зелений повтори 6 ( вперед 70 праворуч 60 )"
-          >
-            Зелений шестикутник
-          </div>
-          <div
-            class="example-block"
-            data-code="колір фіолетовий повтори 5 ( вперед 80 праворуч 144 )"
-          >
-            Фіолетова зірка
-          </div>
-        </div>
-      </div>
-      <div class="help-box">
-        <h3>Основні команди для равлика</h3>
-        <div class="command-list">
-          <div class="command-item">
-            <div class="command-name">вперед 100</div>
-            <div class="command-desc">Рухає равлика вперед</div>
-          </div>
-          <div class="command-item">
-            <div class="command-name">назад 100</div>
-            <div class="command-desc">Рухає равлика назад</div>
-          </div>
-          <div class="command-item">
-            <div class="command-name">праворуч 90</div>
-            <div class="command-desc">Повертає праворуч</div>
-          </div>
-          <div class="command-item">
-            <div class="command-name">ліворуч 90</div>
-            <div class="command-desc">Повертає ліворуч</div>
-          </div>
-          <div class="command-item">
-            <div class="command-name">колір червоний</div>
-            <div class="command-desc">Змінює колір лінії</div>
-          </div>
-          <div class="command-item">
-            <div class="command-name">повтори 4 ( вперед 100 праворуч 90 )</div>
-            <div class="command-desc">Повторює команди 4 рази</div>
-          </div>
-        </div>
-      </div>
-      <div class="manual-buttons">
-        <button id="to-manual-btn" onclick="window.location.href='manual.html'">
-          📗 Поcібник з програмування
-        </button>
-      </div>
+        <div class="snail-icon">🏡</div>
+        <p class="message">
+            Друзі, наш РАВЛИК переїхав на нову, ще кращу адресу!
+        </p>
+        <p class="message" style="font-size: 1.8rem; font-weight: bold; color: #ff6347;">
+             rvlk.online
+        </p>
+        <p class="message">
+            і вже чекає на тебе там зі своїми пригодами та малюнками!
+        </p>
+        <a href="https://rvlk.online" class="new-address-link" target="_blank" rel="noopener noreferrer">
+            Перейти на rvlk.online
+        </a>
     </div>
+
     <footer>
-      <p>
-        © 2025 Мова програмування "Равлик" | Створено для навчання дітей
-        програмуванню
-      </p>
+        <p>
+            &copy; 2025 Мова програмування РАВЛИК
+        </p>
     </footer>
-    <script src="script.js"></script>
-  </body>
+</body>
 </html>
