--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="manifest" href="site.webmanifest" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q8HSYBM61W"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QV58ZGT594"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-Q8HSYBM61W');
+    
+      gtag('config', 'G-QV58ZGT594');
     </script>
   </head>
 
