--- a/manual.html
+++ b/manual.html
@@ -16,12 +16,15 @@
     <link rel="stylesheet" href="css/global.css" />
     <link rel="stylesheet" href="css/manual.css" />
     <link rel="stylesheet" type="text/css" href="css/accessibility.css" /> <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet"> <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q8HSYBM61W"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-Q8HSYBM61W');
-    </script>
+    <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-QV58ZGT594"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+        
+          gtag('config', 'G-QV58ZGT594');
+        </script>
 
 </head>
 <body>
