--- a/lessons.html
+++ b/lessons.html
@@ -15,6 +15,15 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="stylesheet" href="css/global.css" />
     <link rel="stylesheet" href="css/lessons.css" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QV58ZGT594"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-QV58ZGT594');
+    </script>
 </head>
 <body>
     <div class="page-wrapper">
