--- a/lessons.html
+++ b/lessons.html
@@ -458,7 +458,7 @@
         <nav class="bottom-nav-buttons" aria-label="Основна навігація сайтом">
             <a href="index.html" class="btn btn-success">🎨 До Редактора</a>
             <a href="manual.html" class="btn btn-primary">📖 До Посібника</a>
-            <a href="resourses.html" class="btn btn-info">🧩 Додаткові Ресурси</a>
+            <!-- <a href="resourses.html" class="btn btn-info">🧩 Додаткові Ресурси</a> -->
         </nav>
         
         <footer class="main-footer">
