--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <script type="module" src="js/modules/constants.js"></script>
     <script type="module" src="js/modules/ui.js"></script>
     <script type="module" src="js/modules/ravlykInterpreter.js"></script>
-    <script type="module" src="js/accessibility.js"></script>
+    <script src="js/accessibility.js"></script>
     <script type="module" src="js/main.js"></script>
   </body>
 </html>
