--- a/lessons.html
+++ b/lessons.html
@@ -465,6 +465,6 @@
             <p>&copy;2025 Мова програмування РАВЛИК | Автор: пан Артем - вчитель інформатики <a href="https://www.facebook.com/panaptem" target="_blank" rel="noopener" style="margin-left:8px;">(Facebook)</a></p>
         </footer>
     </div>
-    <script type="module" src="js/lessonsPage.js"></script>
+    <script src="js/lessonsPage.js"></script>
 </body>
 </html>
