--- a/lessons.html
+++ b/lessons.html
@@ -28,7 +28,7 @@
 <body>
     <div class="page-wrapper">
         <header class="course-header">
-            <h1>🐌 Цикл уроків "Малюй із Равликом!" 🎨</h1>
+            <h1>🐌 Цикл уроків "Малюй з Равликом!" 🎨</h1>
             <p>Навчайся програмувати весело та легко, відкриваючи двері у світ технологій!</p>
         </header>
 
