--- a/resourсes.html
+++ b/resourсes.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Додаткові ресурси для навчання та розваг з Равликом: розмальовки, головоломки, інтерактивні історії та ігри." />
     <meta name="keywords" content="равлик, програмування для дітей, додаткові матеріали, розмальовки, головоломки, інтерактивні історії, настільна гра" />
+    <link rel="canonical" href="https://ravlyk.org/resources.html" />
     <meta name="author" content="Равлик" />
     <meta name="robots" content="index, follow" />
     <title>Равлик: Додаткові Ресурси та Розваги!</title>
