--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Равлик - українська мова програмування для дітей. Навчайтеся програмувати через малювання геометричних фігур." />
     <meta name="keywords" content="равлик, програмування для дітей, вивчення програмування, українська мова програмування, черепашача графіка, малювання кодом" />
+    <link rel="canonical" href="https://ravlyk.org/" />
     <meta name="author" content="Равлик" />
     <meta name="robots" content="index, follow" />
     <title>Равлик - онлайн програмування для дітей</title>
