--- a/lessons.html
+++ b/lessons.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Равлик - українська мова програмування для дітей. Навчайтесь програмувати через малювання геометричних фігур. Уроки з Равликом!" />
     <meta name="keywords" content="равлик, програмування для дітей, вивчення програмування, українська мова програмування, черепашача графіка, малювання кодом, уроки програмування" />
+    <link rel="canonical" href="https://ravlyk.org/lessons.html" />
     <meta name="author" content="Равлик" />
     <meta name="robots" content="index, follow" />
     <title>Уроки з Равликом! Покрокове навчання програмуванню</title>
