--- a/manual.html
+++ b/manual.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Детальний посібник з мови програмування Равлик для дітей. Навчання програмуванню через малювання фігур, від простих команд до складних повторень." />
-    <meta name="keywords" content="равлик, посібник програмування, програмування для дітей, уроки програмування, команди равлик, геометричні фігури кодом, черепашача графіка" />
+    <meta name="keywords" content="равлик, посібник програмування, програмування для дітей, уроки програмування, команди равлик, геометричні фігури кодом, черепашача графіка, черепашина графіка, черепашка, програмування черепашка" />
     <link rel="canonical" href="https://ravlyk.org/manual.html" />
     <meta name="author" content="Равлик" />
     <meta name="robots" content="index, follow" />
